--- a/resources/log4j2.properties
+++ b/resources/log4j2.properties
@@ -19,7 +19,7 @@ appender.rolling.name = RollingFile
 appender.rolling.fileName = ${filename}
 appender.rolling.filePattern = out/logs/old/hometask4-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d %p %C [%t] %m%n
+appender.rolling.layout.pattern = %d %p %C %M [%t] %m%n
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
 appender.rolling.policies.time.interval = 2
